[project]
name = "price-elasticity"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Andy Weaver", email = "andrewayersweaver+github@gmail.com" }
]
dependencies = [
    "pandas>=2.2.3",
    "matplotlib>=3.9.2",
    "scipy>=1.14.1",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.rye]
managed = true
dev-dependencies = [
    "pandas-stubs>=2.2.3.241009",
    "scipy-stubs>=1.14.1.0",
]

[tool.maturin]
python-source = "python"
module-name = "price_elasticity._lowlevel"
features = ["pyo3/extension-module"]
